--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,10 @@
-# An LKM Makefile
-#
-# A Makefile is required to build a loadable kernel module (LKM).  In fact, it is a special kbuild
-# Makefile.
-#
-# Warning: Makefiles require Tab characters in front of rules (in front of the calls to "make" below.
-#
-
-# goal definition, defines the module to be built (hello_world.o)
-# obj-m defines a loadable module goal, whereas obj-y indicates a built-in object goal
 obj-m+=asfvolt-cpld.o
-
+obj-m+=asfvolt_dev.o
+#KDIR := /lib/modules/$(shell uname -r)/build
+KDIR := /home/voltha/Build-BAL2.6.1.3/OpenNetworkLinux/packages/base/amd64/kernels/kernel-4.14-lts-x86-64-all/builds/jessie/linux-4.14.49
+PWD := $(shell pwd)
 
 # The remaineder of this Makefile is similar to a regular Makefile
-
 # The "$(shell uname -r)" is a useful call to return the current kernel build version
 # The -C option switches the directory to the kernel direcotry before performing any make tasks
 # The "M=$(PWD)" variable assignment tells the make command where the actual project files exist
@@ -21,6 +13,8 @@ obj-m+=asfvolt-cpld.o
 # An alternative target is "modules_install", which would install the module (needs sudo)
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) modules
+	make -C $(KDIR) M=$(PWD) modules
+	$(CC) test_cpld.c -o test_cpld	
 clean:
-	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) clean
+	make -C $(KDIR) M=$(PWD) clean
+	rm -f test_cpld
